# cp_clock

./: Makefile  cp_clock.service  main.py  pyproject.toml
cp_clock/: loop.py  main.py  start.py
