[tool.poetry]
name = "cp_clock"
version = "0.1.0"
description = "CharliePlex LED Clock"
authors = ["Matt Gleich <git@mattglei.ch>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.7"
adafruit-circuitpython-is31fl3731 = "^3.2.1"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
